Change layout and Update Logic

--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -1,153 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:background="#FFEB3B"
     android:orientation="vertical"
-    android:weightSum="7"
     >
 
     <TextView
         android:id="@+id/txt_pro"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="3"
+        android:layout_height="70dp"
         android:textColor="#0C0C0C"
         android:textSize="32dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="27dp"
-        android:layout_weight="1"
+        android:layout_height="40dp"
         android:orientation="horizontal"
-        android:padding="2dp"
-        android:weightSum="4">
+        android:padding="2dp">
 
         <TextView
             android:id="@+id/textView"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
             android:layout_margin="2dp"
-            android:layout_weight="3"
+            android:layout_weight="0.75"
             android:background="#095C81"
-            android:textColor="#FFFFFF"
+            android:textColor="#FBFAFA"
             android:textColorLink="#FFFFFF"
-            android:textSize="22dp" />
+            android:textSize="18dp" />
 
         <Button
             android:id="@+id/delete"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_margin="2dp"
-            android:layout_weight="1"
+            android:layout_weight="0.25"
             android:background="#353434"
-            android:text="clear"
+            android:text="Clear"
             android:textColor="#FFFFFF"
             android:textSize="12sp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="2dp">
-
-        <Button
-            android:id="@+id/num_7"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="2dp"
-            android:layout_weight="1"
-            android:background="#8C8B8B"
-            android:text="7"
-            android:textColor="#FFFFFF"
-            android:textSize="60dp" />
-
-        <Button
-            android:id="@+id/num_8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="2dp"
-            android:layout_weight="1"
-            android:background="#8C8B8B"
-            android:text="8"
-            android:textColor="#FFFFFF"
-            android:textSize="60dp" />
-
-        <Button
-            android:id="@+id/num_9"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="2dp"
-            android:layout_weight="1"
-            android:background="#8C8B8B"
-            android:text="9"
-            android:textColor="#FFFFFF"
-            android:textSize="60dp" />
-
-        <Button
-            android:id="@+id/div"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="2dp"
-            android:layout_weight="1"
-            android:background="#353434"
-            android:text="/"
-            android:textColor="#FFFFFF"
-            android:textSize="60dp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="2dp">
-
-        <Button
-            android:id="@+id/num_4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="2dp"
-            android:layout_weight="1"
-            android:background="#8C8B8B"
-            android:text="4"
-            android:textColor="#FFFFFF"
-            android:textSize="60dp" />
-
-        <Button
-            android:id="@+id/num_5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="2dp"
-            android:layout_weight="1"
-            android:background="#8C8B8B"
-            android:text="5"
-            android:textColor="#FFFFFF"
-            android:textSize="60dp" />
-
-        <Button
-            android:id="@+id/num_6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="2dp"
-            android:layout_weight="1"
-            android:background="#8C8B8B"
-            android:text="6"
-            android:textColor="#FFFFFF"
-            android:textSize="60dp" />
-
-        <Button
-            android:id="@+id/mul"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="2dp"
-            android:layout_weight="1"
-            android:background="#353434"
-            android:text="*"
-            android:textColor="#FFFFFF"
-            android:textSize="60dp" />
     </LinearLayout>
 
     <LinearLayout
@@ -165,7 +58,7 @@
             android:background="#8C8B8B"
             android:text="1"
             android:textColor="#FFFFFF"
-            android:textSize="60dp" />
+            android:textSize="40dp" />
 
         <Button
             android:id="@+id/num_2"
@@ -176,7 +69,7 @@
             android:background="#8C8B8B"
             android:text="2"
             android:textColor="#FFFFFF"
-            android:textSize="60dp" />
+            android:textSize="40dp" />
 
         <Button
             android:id="@+id/num_3"
@@ -187,7 +80,109 @@
             android:background="#8C8B8B"
             android:text="3"
             android:textColor="#FFFFFF"
-            android:textSize="60dp" />
+            android:textSize="40dp" />
+
+        <Button
+            android:id="@+id/div"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:layout_weight="1"
+            android:background="#353434"
+            android:text="/"
+            android:textColor="#FFFFFF"
+            android:textSize="40dp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="2dp">
+
+        <Button
+            android:id="@+id/num_4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:layout_weight="1"
+            android:background="#8C8B8B"
+            android:text="4"
+            android:textColor="#FFFFFF"
+            android:textSize="40dp" />
+
+        <Button
+            android:id="@+id/num_5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:layout_weight="1"
+            android:background="#8C8B8B"
+            android:text="5"
+            android:textColor="#FFFFFF"
+            android:textSize="40dp" />
+
+        <Button
+            android:id="@+id/num_6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:layout_weight="1"
+            android:background="#8C8B8B"
+            android:text="6"
+            android:textColor="#FFFFFF"
+            android:textSize="40dp" />
+
+        <Button
+            android:id="@+id/mul"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:layout_weight="1"
+            android:background="#353434"
+            android:text="*"
+            android:textColor="#FFFFFF"
+            android:textSize="40dp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="2dp">
+
+        <Button
+            android:id="@+id/num_7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:layout_weight="1"
+            android:background="#8C8B8B"
+            android:text="7"
+            android:textColor="#FFFFFF"
+            android:textSize="40dp" />
+
+        <Button
+            android:id="@+id/num_8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:layout_weight="1"
+            android:background="#8C8B8B"
+            android:text="8"
+            android:textColor="#FFFFFF"
+            android:textSize="40dp" />
+
+        <Button
+            android:id="@+id/num_9"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:layout_weight="1"
+            android:background="#8C8B8B"
+            android:text="9"
+            android:textColor="#FFFFFF"
+            android:textSize="40dp" />
 
         <Button
             android:id="@+id/sub"
@@ -198,7 +193,7 @@
             android:background="#353434"
             android:text="-"
             android:textColor="#FFFFFF"
-            android:textSize="60dp" />
+            android:textSize="40dp" />
     </LinearLayout>
 
     <LinearLayout
@@ -216,7 +211,7 @@
             android:background="#8C8B8B"
             android:text="."
             android:textColor="#FFFFFF"
-            android:textSize="60dp" />
+            android:textSize="40dp" />
 
         <Button
             android:id="@+id/num_0"
@@ -227,7 +222,7 @@
             android:background="#8C8B8B"
             android:text="0"
             android:textColor="#FFFFFF"
-            android:textSize="60dp" />
+            android:textSize="40dp" />
 
         <Button
             android:id="@+id/equal"
@@ -238,7 +233,7 @@
             android:background="#8C8B8B"
             android:text="="
             android:textColor="#FFFFFF"
-            android:textSize="60dp" />
+            android:textSize="40dp" />
 
         <Button
             android:id="@+id/adding"
@@ -249,7 +244,7 @@
             android:background="#353434"
             android:text="+"
             android:textColor="#FFFFFF"
-            android:textSize="60dp" />
+            android:textSize="40dp" />
     </LinearLayout>
 
 
